@@ -131,6 +131,8 @@ max_hostchecks_age=10080
 # Keep event handlers for 31 days
 max_eventhandlers_age=44640
 
+# Keep external commands for 31 days
+max_externalcommands_age=44640
 
 
 
